发送短信验证码，短信验证，手机号登录，成功部署远程redis

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.12</version>
             </dependency>
+
+
+            <!--数据校验-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>2.3.0.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
