--- a/usercenter/pom.xml
+++ b/usercenter/pom.xml
@@ -58,14 +58,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-dependencies</artifactId>
             <version>2.2.3.RELEASE</version>
+            <type>pom</type>
+            <scope>import</scope>
         </dependency>
 
-
-        <!--服务注册-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -81,7 +77,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
+        </dependency>
         <!--SpringBoot redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
