--- a/seckillcenter/pom.xml
+++ b/seckillcenter/pom.xml
@@ -20,7 +20,6 @@
     <dependencies>
 
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -173,7 +172,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.6.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
