--- a/seckillcenter/src/main/resources/application.yml
+++ b/seckillcenter/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10005
+  port: 10018
 spring:
   application:
     name: secKill-center
@@ -33,15 +33,13 @@ spring:
       ddl-auto: update
   redis:
     database: 0
-    host: 120.26.177.51
+#    host: 120.26.177.51
+    host: 127.0.0.1
     port: 6379
     jedis:
       pool:
-        # 连接池最大连接数（使用负值表示没有限制）
         max-active: 200
-        # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-wait: -1
-        # 连接池中的最大空闲连接
         max-idle: 10
         min-idle: 0
     timeout: 5000
@@ -76,7 +74,6 @@ feign:
   client:
     config:
       default:
-        #想要调用的微服务的名称
         content-center:
           loggerLevel: full
           requestInterceptors:
