--- a/usercenter/src/main/resources/application.yml
+++ b/usercenter/src/main/resources/application.yml
@@ -33,7 +33,8 @@ spring:
       ddl-auto: update
   redis:
     database: 0
-    host: 120.26.177.51
+#    host: 120.26.177.51
+    host: 127.0.0.1
     port: 6379
     jedis:
       pool:
