添加消息队列

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>usercenter</module>
         <module>contentcenter</module>
         <module>seckillcenter</module>
+        <module>mqcenter</module>
     </modules>
 
 
