--- a/contentcenter/pom.xml
+++ b/contentcenter/pom.xml
@@ -140,6 +140,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.2.7.RELEASE</version>
         </dependency>
 
         <!--        feign-->
