--- a/contentcenter/src/main/resources/application.yml
+++ b/contentcenter/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8082
 spring:
   application:
     name: content-center
@@ -27,12 +27,10 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
-    #        server-addr: 120.26.177.51:8848
-    #        server-addr: 120.26.177.51:8848
-    #        namespace: ef32c1be-c63c-4db4-8b07-b3b84a7c27ef
     sentinel:
       transport:
         dashboard: localhost:8081
+
 
   jpa:
     database: mysql
@@ -52,7 +50,7 @@ spring:
         max-idle: 10
         min-idle: 0
     timeout: 5000
-
+#  Sentinel
 management:
   endpoints:
     web:
