我的发布页面和活动编辑

--- a/high-concurrency/package.json
+++ b/high-concurrency/package.json
@@ -11,6 +11,7 @@
     "ali-oss": "^6.15.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.2.0",
