前后端策略的初步添加

--- a/contentcenter/src/main/resources/application.yml
+++ b/contentcenter/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: content-center
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
   zipkin:
     base-url: http://localhost:9411/
     discoveryClientEnabled: false
