并发测试通过

--- a/contentcenter/src/main/resources/application.yml
+++ b/contentcenter/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
 
   jpa:
     database: mysql
-    show-sql: true
+    show-sql: false
     generate-ddl: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
