--- a/mqcenter/pom.xml
+++ b/mqcenter/pom.xml
@@ -115,7 +115,18 @@
 <!--        </dependency>-->
 
 
+        <!--		接口文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.9.2</version>
+        </dependency>
 
 
     </dependencies>
