--- a/high-concurrency/package.json
+++ b/high-concurrency/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-ls": "^3.2.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
